# vivian-backend

./: .env.example  .envrc  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  reset_alembic.sh
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  20260208_0001_create_chat_tables.py  20260210_0002_create_client_home_tables.py  20260210_0003_update_home_membership_roles.py  20260210_0004_rename_clients_to_users.py  20260210_0005_create_auth_sessions.py  20260210_0006_add_user_profile_fields.py  20260210_0007_create_home_connections.py  20260210_0008_create_mcp_server_settings.py
apps/api/scripts/: db_shell.py  seed_identity.py
apps/api/tests/: test_auth.py  test_chat_session_context.py  test_document_workflows.py  test_exception_handler.py  test_follow_up_questions.py  test_mcp_client_result_parsing.py  test_mcp_contract_wiring.py  test_personality.py  test_receipts.py  test_receipts_duplicate.py  test_receipts_parse.py  test_utils.py
apps/api/vivian_api/: config.py  logging_service.py  main.py  utils.py
apps/api/vivian_api/auth/: dependencies.py  router.py  schemas.py  security.py
apps/api/vivian_api/chat/: __init__.py  connection.py  document_workflows.py  follow_up_questions.py  handler.py  history_router.py  intent_router.py  message_protocol.py  personality.py  router.py  session.py
apps/api/vivian_api/chat/flows/: __init__.py  balance.py  bulk_import.py  upload.py
apps/api/vivian_api/crud/: chat_crud.py
apps/api/vivian_api/db/: database.py
apps/api/vivian_api/models/: __init__.py  chat_models.py  connection_models.py  identity_models.py  schemas.py
apps/api/vivian_api/repositories/: __init__.py  chat_repository.py  connection_repository.py
apps/api/vivian_api/routers/: integrations.py  ledger.py  mcp.py  mcp_settings.py  receipts.py
apps/api/vivian_api/schemas/: chat_schemas.py
apps/api/vivian_api/services/: encryption.py  google_integration.py  llm.py  mcp_client.py  mcp_registry.py  receipt_parser.py  temp_cleanup.py
apps/mcp-server/: .env.example  Dockerfile  pyproject.toml
apps/mcp-server/tests/: test_charitable_tools.py  test_column_filters.py  test_fastmcp_server.py
apps/mcp-server/vivian_mcp/: config.py  contracts.py  server.py
apps/mcp-server/vivian_mcp/tools/: charitable_tools.py  drive_tools.py  google_common.py  hsa_tools.py
apps/test-mcp-server/: pyproject.toml
apps/test-mcp-server/tests/: test_addition.py
apps/test-mcp-server/vivian_test_mcp/: __init__.py  server.py
docs/: DATABASE_TOUR.md
scripts/: .gitkeep  get_google_token.py  migrate.py  run-tests.sh
