[project]
name = "vivian-test-mcp-server"
version = "0.1.0"
description = "Simple test MCP server for validating Vivian MCP client integration."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
vivian-test-mcp = "vivian_test_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vivian_test_mcp"]
